--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "eslint-config-react": "^1.1.7",
     "eslint-config-standard": "^11.0.0",
     "eslint-config-standard-react": "^6.0.0",
-    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-react": "^7.7.0",
@@ -17,7 +17,7 @@
     "history": "^4.7.2",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
-    "react-dom": "15.6.2",
+    "react-dom": "^16.8.4",
     "react-iframe": "^1.1.0",
     "react-iframe-comm": "^1.2.2",
     "react-materialize": "^2.0.7",
@@ -25,7 +25,7 @@
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.1",
+    "react-scripts": "^1.1.1",
     "react-timer": "^1.0.2",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
